--- a/KTaskRemainder/KTaskRemainder/KTaskReminder.csproj
+++ b/KTaskRemainder/KTaskRemainder/KTaskReminder.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{01CE87DA-97BF-4D16-980A-176DA4408E2B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KTaskRemainder</RootNamespace>
-    <AssemblyName>KTaskRemainder</AssemblyName>
+    <RootNamespace>KTaskReminder</RootNamespace>
+    <AssemblyName>KTaskReminder</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
